fix overflow

--- a/frontend/our-groceries/src/app/item-list/item-list.component.scss
+++ b/frontend/our-groceries/src/app/item-list/item-list.component.scss
@@ -22,7 +22,7 @@
 
 .overflow-buffer {
   overflow-y: scroll;
-  max-height: 69vh;
+  max-height: 65vh;
   -ms-overflow-style: none;
 }
 
